# template-basic-python

./: .flake8  .pylintrc  Makefile  pyproject.toml
tests/: test_dynaconf.py
